@@ -39,9 +39,20 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
     {
         current <- getRversion()
         ## depends on R version?
-        ## That this is NULL or of length 1 (installed < 2.6.0 only) or
+        ## If installed >= 2.7.0 it will have Rdepends2
+        ## Otherwise Rdepends, which this NULL or of length 1
+        ## (installed < 2.6.0 only) or
         ## length 3 with valid components was checked at INSTALL time.
-        if(length(Rdeps <- pkgInfo$Rdepends) > 1) {
+       if(length(Rdeps <- pkgInfo$Rdepends2)) {
+            for(dep in Rdeps) {
+                target <- as.numeric_version(dep$version)
+                res <- eval(parse(text=paste("current", dep$op, "target")))
+                if(!res)
+                    stop(gettextf("This is R %s, package '%s' needs %s %s",
+                                  current, pkgname, dep$op, target),
+                         call. = FALSE, domain = NA)
+            }
+        } else if(length(Rdeps <- pkgInfo$Rdepends) > 1) {
             target <- as.numeric_version(Rdeps$version)
             res <- eval(parse(text=paste("current", Rdeps$op, "target")))
             if(!res)
@@ -1029,13 +1040,15 @@ manglePackageName <- function(pkgName, pkgVersion)
 .getRequiredPackages2 <-
 function(pkgInfo, quietly = FALSE, lib.loc = NULL, useImports = FALSE)
 {
-    pkgs <- names(pkgInfo$Depends)
+    pkgs <- unique(names(pkgInfo$Depends))
     if (length(pkgs)) {
         pkgname <- pkgInfo$DESCRIPTION["Package"]
         for(pkg in pkgs) {
-            z <- pkgInfo$Depends[[pkg]]
+            ## allow for multiple occurrences
+            zs <- pkgInfo$Depends[names(pkgInfo$Depends) == pkg]
+            have_vers <- any(sapply(zs, length) > 1L)
             if ( !paste("package", pkg, sep = ":") %in% search() ) {
-                if (length(z) > 1) {
+                if (have_vers) {
                     pfile <- system.file("Meta", "package.rds",
                                          package = pkg, lib.loc = lib.loc)
                     if(nzchar(pfile) == 0)
@@ -1043,11 +1056,13 @@ function(pkgInfo, quietly = FALSE, lib.loc = NULL, useImports = FALSE)
                                       pkg, pkgname),
                              call. = FALSE, domain = NA)
                     current <- .readRDS(pfile)$DESCRIPTION["Version"]
-                    target <- as.numeric_version(z$version)
-                    if (!eval(parse(text=paste("current", z$op, "target"))))
-                        stop(gettextf("package '%s' %s was found, but %s %s is required by '%s'",
-                             pkg, current, z$op, target, pkgname),
-                             call. = FALSE, domain = NA)
+                    for(z in zs) {
+                        target <- as.numeric_version(z$version)
+                        if (!eval(parse(text=paste("current", z$op, "target"))))
+                            stop(gettextf("package '%s' %s was found, but %s %s is required by '%s'",
+                                          pkg, current, z$op, target, pkgname),
+                                 call. = FALSE, domain = NA)
+                    }
                 }
 
                 if (!quietly)
@@ -1059,15 +1074,17 @@ function(pkgInfo, quietly = FALSE, lib.loc = NULL, useImports = FALSE)
                      call. = FALSE, domain = NA)
             } else {
                 ## check the required version number, if any
-                if (length(z) > 1) {
+                if (have_vers) {
                     pfile <- system.file("Meta", "package.rds",
                                          package = pkg, lib.loc = lib.loc)
                     current <- .readRDS(pfile)$DESCRIPTION["Version"]
-                    target <- as.numeric_version(z$version)
-                    if (!eval(parse(text=paste("current", z$op, "target"))))
-                        stop(gettextf("package '%s' %s is loaded, but %s %s is required by '%s'",
-                             pkg, current, z$op, target, pkgname),
-                             call. = FALSE, domain = NA)
+                    for(z in zs) {
+                        target <- as.numeric_version(z$version)
+                        if (!eval(parse(text=paste("current", z$op, "target"))))
+                            stop(gettextf("package '%s' %s is loaded, but %s %s is required by '%s'",
+                                          pkg, current, z$op, target, pkgname),
+                                 call. = FALSE, domain = NA)
+                    }
                 }
             }
         }
